WIP: spring security impl.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernote.diolect = org.hibernate.dialect.PostgreSQL9Diale
 spring.jpa.hibernate.ddl-auto=update
 
 
+jwt.secret=suggestai
