--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://suggestdb:5432/postgres
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 
-spring.jpa.properties.hibernote.diolect = org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
-
 
 jwt.secret=suggestai
 jwt.expire-duration=3000000000
@@ -14,3 +12,5 @@ suggest.server.url=http://127.0.0.1:5001/
 
 suggest.server.host=http://127.0.0.1
 suggest.server.port=5001
+
+server.port=${PORT:8080}
