--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret=suggestai
 jwt.expire-duration=3000000000
 
-suggest.server.url=http://127.0.0.1:5001/
-
-suggest.server.host=http://127.0.0.1
+suggest.server.host=http://suggestai-engine
 suggest.server.port=5001
 
 server.port=${PORT:8080}
