--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret=suggestai
 jwt.expire-duration=3000000000
 
-suggest.server.host=http://suggestai-engine
-suggest.server.port=5001
+
+suggestai-engine.host=suggestai-engine
+suggestai-engine.port=5000
 
 server.port=${PORT:8080}
