--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       - '5432:5432'
     volumes:
       - ./db:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
+      interval: 2s
+      timeout: 3s
+      retries: 10
     networks:
       - suggest-network
 
@@ -19,6 +24,9 @@ services:
     container_name: suggestai
     ports:
       - '8080:8080'
+    depends_on:
+      suggestdb:
+        condition: service_healthy
     networks:
       - suggest-network
 
