--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret=suggestai
 jwt.expire-duration=3000000000
 
+POSTGRES_USER=${POSTGRES_USER:postgres}
+POSTGRES_PASSWORD=${POSTGRES_PASSWORD:postgres}
+
+
 
 suggestai-engine.host=suggestai-engine
 suggestai-engine.port=5000
