More test cases added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://suggestdb:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username = postgres
 spring.datasource.password = postgres
@@ -16,4 +16,4 @@ POSTGRES_PASSWORD=${POSTGRES_PASSWORD:postgres}
 suggestai-engine.host=suggestai-engine
 suggestai-engine.port=5000
 
-server.port=${PORT:8080}
+server.port=${PORT:8081}
