CorConfig file added.Some regulations about security done.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ POSTGRES_PASSWORD=${POSTGRES_PASSWORD:postgres}
 
 
 
-suggestai-engine.host=suggestai-engine
+suggestai-engine.host=localhost
 suggestai-engine.port=5000
 
 server.port=${PORT:8081}
